add sprite import add render view

--- a/Assets/Main/Layouts/EditorSreen.uxml
+++ b/Assets/Main/Layouts/EditorSreen.uxml
@@ -7,6 +7,11 @@
             <ui:Button text="Load Texture" parse-escape-sequences="true" display-tooltip-when-elided="true" name="LoadTextureBtn" />
             <ui:Button text="Save Vox" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SaveVoxBtn" />
         </ui:VisualElement>
+        <ui:VisualElement style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+            <ui:Label tabindex="-1" text="Editor Mode" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+            <ui:Button text="Edit" parse-escape-sequences="true" display-tooltip-when-elided="true" name="EditModeBtn" />
+            <ui:Button text="Render" parse-escape-sequences="true" display-tooltip-when-elided="true" name="RenderModeBtn" />
+        </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 0; align-items: flex-start; align-self: flex-start;">
             <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
                 <ui:Label tabindex="-1" text="Brush" parse-escape-sequences="true" display-tooltip-when-elided="true" />
