--- a/Assets/Main/Layouts/EditorSreen.uxml
+++ b/Assets/Main/Layouts/EditorSreen.uxml
@@ -9,14 +9,19 @@
         </ui:VisualElement>
         <ui:VisualElement name="AtlasControlsLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
             <ui:Label tabindex="-1" text="Sprite Index" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Label" />
-            <ui:Label tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SpriteIndexLabel" />
             <ui:Button text="Previous" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PreviousSpriteBtn" />
             <ui:Button text="Next" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NextSpriteBtn" />
+            <ui:Label tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SpriteIndexLabel" />
         </ui:VisualElement>
         <ui:VisualElement name="EditorModeLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
             <ui:Label tabindex="-1" text="Editor Mode" parse-escape-sequences="true" display-tooltip-when-elided="true" />
             <ui:Button text="Edit" parse-escape-sequences="true" display-tooltip-when-elided="true" name="EditModeBtn" />
             <ui:Button text="Render" parse-escape-sequences="true" display-tooltip-when-elided="true" name="RenderModeBtn" />
+        </ui:VisualElement>
+        <ui:VisualElement name="CopyPasteLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+            <ui:Label tabindex="-1" text="Model Buffer" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+            <ui:Button text="Copy" parse-escape-sequences="true" display-tooltip-when-elided="true" name="CopyModelBtn" />
+            <ui:Button text="Paste" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PasteModelBtn" />
         </ui:VisualElement>
         <ui:VisualElement name="BrushTypeLayput" style="flex-grow: 0; align-items: flex-start; align-self: flex-start;">
             <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
