--- a/Assets/Main/Layouts/EditorSreen.uxml
+++ b/Assets/Main/Layouts/EditorSreen.uxml
@@ -1,52 +1,56 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="align-items: center; align-self: flex-start;">
-        <ui:VisualElement name="TabsLayout" style="flex-grow: 0; flex-direction: row;">
+    <ui:VisualElement style="align-items: center; align-self: center; margin-top: auto; margin-right: auto; margin-bottom: auto; margin-left: auto; background-color: rgb(219, 219, 219); padding-top: 16px; padding-right: 16px; padding-bottom: 16px; padding-left: 16px;">
+        <ui:VisualElement name="TabsLayout" style="flex-grow: 0; flex-direction: row; align-items: center; align-self: flex-start;">
             <ui:Button text="Import From Texture" name="ImportBtn" />
             <ui:Button text="Export Mesh" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportBtn" />
+        </ui:VisualElement>
+        <ui:VisualElement style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
             <ui:Button text="Load Vox" parse-escape-sequences="true" display-tooltip-when-elided="true" name="LoadVoxBtn" />
             <ui:Button text="Load Texture" parse-escape-sequences="true" display-tooltip-when-elided="true" name="LoadTextureBtn" />
             <ui:Button text="Save Vox" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SaveVoxBtn" />
         </ui:VisualElement>
-        <ui:Button text="Toggle Camera" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleCameraBtn" style="align-self: flex-start;" />
-        <ui:VisualElement name="AtlasControlsLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
-            <ui:Label tabindex="-1" text="Sprite Index" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Label" />
-            <ui:Button text="Previous" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PreviousSpriteBtn" />
-            <ui:Button text="Next" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NextSpriteBtn" />
-            <ui:Label tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SpriteIndexLabel" />
-        </ui:VisualElement>
-        <ui:VisualElement name="EditorModeLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
-            <ui:Label tabindex="-1" text="Editor Mode" parse-escape-sequences="true" display-tooltip-when-elided="true" />
-            <ui:Button text="Edit" parse-escape-sequences="true" display-tooltip-when-elided="true" name="EditModeBtn" />
-            <ui:Button text="Render" parse-escape-sequences="true" display-tooltip-when-elided="true" name="RenderModeBtn" />
-        </ui:VisualElement>
-        <ui:VisualElement name="CopyPasteLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
-            <ui:Label tabindex="-1" text="Model Buffer" parse-escape-sequences="true" display-tooltip-when-elided="true" />
-            <ui:Button text="Copy" parse-escape-sequences="true" display-tooltip-when-elided="true" name="CopyModelBtn" />
-            <ui:Button text="Paste" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PasteModelBtn" />
-        </ui:VisualElement>
-        <ui:VisualElement name="BrushModeLayput" style="flex-grow: 0; align-items: flex-start; align-self: flex-start; flex-direction: row;">
-            <ui:Label tabindex="-1" text="Brush Mode" parse-escape-sequences="true" display-tooltip-when-elided="true" />
-            <ui:Button text="One" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushModeOneBtn" />
-            <ui:Button text="Section" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushModeSectionBtn" />
-        </ui:VisualElement>
-        <ui:VisualElement name="BrushTypeLayput" style="flex-grow: 0; align-items: flex-start; align-self: flex-start; flex-direction: row;">
-            <ui:Label tabindex="-1" text="Brush" parse-escape-sequences="true" display-tooltip-when-elided="true" />
-            <ui:Button text="Add" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushAddBtn" />
-            <ui:Button text="Delete" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushDeleteBtn" />
-        </ui:VisualElement>
-        <ui:VisualElement name="ShaderSettingsLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
-            <ui:Button text="Toggle Grid" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleGridBtn" />
-            <ui:Button text="Toggle Transparent" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleTransparentBtn" />
-        </ui:VisualElement>
-        <ui:VisualElement name="ActionsHistoryLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
-            <ui:Button text="Cancel Last Action" parse-escape-sequences="true" display-tooltip-when-elided="true" name="CancelActionBtn" />
-            <ui:Button text="Restore Canceled Action" parse-escape-sequences="true" display-tooltip-when-elided="true" name="RestoreActionBtn" />
-        </ui:VisualElement>
-        <ui:VisualElement name="PivotPointLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
-            <ui:Label tabindex="-1" text="Pivot Point (x, y)" parse-escape-sequences="true" display-tooltip-when-elided="true" />
-            <ui:IntegerField value="0" name="PivotXField" style="align-items: stretch; align-self: auto;" />
-            <ui:IntegerField value="0" name="PivotYField" />
-            <ui:Button text="Apply" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ApplyPivotBtn" />
+        <ui:VisualElement name="LoadedStateLayout" style="flex-grow: 0; align-self: flex-start;">
+            <ui:Button text="Switch Camera" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleCameraBtn" style="align-self: flex-start;" />
+            <ui:VisualElement name="AtlasControlsLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+                <ui:Label tabindex="-1" text="Sprite Index" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Label" />
+                <ui:Button text="Previous" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PreviousSpriteBtn" />
+                <ui:Button text="Next" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NextSpriteBtn" />
+                <ui:Label tabindex="-1" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SpriteIndexLabel" />
+            </ui:VisualElement>
+            <ui:VisualElement name="EditorModeLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+                <ui:Label tabindex="-1" text="Editor Mode" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+                <ui:Button text="Edit" parse-escape-sequences="true" display-tooltip-when-elided="true" name="EditModeBtn" />
+                <ui:Button text="Render" parse-escape-sequences="true" display-tooltip-when-elided="true" name="RenderModeBtn" />
+            </ui:VisualElement>
+            <ui:VisualElement name="CopyPasteLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+                <ui:Label tabindex="-1" text="Model Buffer" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+                <ui:Button text="Copy" parse-escape-sequences="true" display-tooltip-when-elided="true" name="CopyModelBtn" />
+                <ui:Button text="Paste" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PasteModelBtn" />
+            </ui:VisualElement>
+            <ui:VisualElement name="BrushModeLayput" style="flex-grow: 0; align-items: flex-start; align-self: flex-start; flex-direction: row;">
+                <ui:Label tabindex="-1" text="Brush Mode" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+                <ui:Button text="One" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushModeOneBtn" />
+                <ui:Button text="Section" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushModeSectionBtn" />
+            </ui:VisualElement>
+            <ui:VisualElement name="BrushTypeLayput" style="flex-grow: 0; align-items: flex-start; align-self: flex-start; flex-direction: row;">
+                <ui:Label tabindex="-1" text="Brush" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+                <ui:Button text="Add" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushAddBtn" />
+                <ui:Button text="Delete" parse-escape-sequences="true" display-tooltip-when-elided="true" name="BrushDeleteBtn" />
+            </ui:VisualElement>
+            <ui:VisualElement name="ShaderSettingsLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+                <ui:Button text="Toggle Grid" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleGridBtn" />
+                <ui:Button text="Toggle Transparent" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleTransparentBtn" />
+            </ui:VisualElement>
+            <ui:VisualElement name="ActionsHistoryLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+                <ui:Button text="Cancel Action" parse-escape-sequences="true" display-tooltip-when-elided="true" name="CancelActionBtn" />
+                <ui:Button text="Restore Action" parse-escape-sequences="true" display-tooltip-when-elided="true" name="RestoreActionBtn" />
+            </ui:VisualElement>
+            <ui:VisualElement name="PivotPointLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+                <ui:Label tabindex="-1" text="Pivot Point (x, y)" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+                <ui:IntegerField value="0" name="PivotXField" style="align-items: stretch; align-self: auto;" />
+                <ui:IntegerField value="0" name="PivotYField" />
+                <ui:Button text="Apply" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ApplyPivotBtn" />
+            </ui:VisualElement>
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
