--- a/Assets/Main/Layouts/EditorSreen.uxml
+++ b/Assets/Main/Layouts/EditorSreen.uxml
@@ -10,7 +10,10 @@
             <ui:Button text="Save Vox" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SaveVoxBtn" />
         </ui:VisualElement>
         <ui:VisualElement name="LoadedStateLayout" style="flex-grow: 0; align-self: flex-start;">
-            <ui:Button text="Switch Camera" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleCameraBtn" style="align-self: flex-start;" />
+            <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
+                <ui:Button text="Switch Camera" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleCameraBtn" style="align-self: flex-start;" />
+                <ui:Button text="Toggle Sprite Reference" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ToggleSpriteRefBtn" />
+            </ui:VisualElement>
             <ui:VisualElement name="AtlasControlsLayout" style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
                 <ui:Label tabindex="-1" text="Sprite Index" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Label" />
                 <ui:Button text="Previous" parse-escape-sequences="true" display-tooltip-when-elided="true" name="PreviousSpriteBtn" />
