--- a/Assets/Main/Layouts/EditorInfoScreen.uxml
+++ b/Assets/Main/Layouts/EditorInfoScreen.uxml
@@ -7,6 +7,7 @@
     <ui:Label tabindex="-1" text="Copy: CTRL + C" parse-escape-sequences="true" display-tooltip-when-elided="true" />
     <ui:Label tabindex="-1" text="Paste: CTRL + V" parse-escape-sequences="true" display-tooltip-when-elided="true" />
     <ui:Label tabindex="-1" text="Draw By Section: Hold SHIFT" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+    <ui:Label tabindex="-1" text="Draw With Projection: Hold X" parse-escape-sequences="true" display-tooltip-when-elided="true" />
     <ui:Label tabindex="-1" text="Delete Voxels: Hold CTRL" parse-escape-sequences="true" display-tooltip-when-elided="true" />
     <ui:Label tabindex="-1" text="Cancel: CTRL + Z" parse-escape-sequences="true" display-tooltip-when-elided="true" />
     <ui:Label tabindex="-1" text="Revert: CTRL + Y / CTRL + SHIFT + Z" parse-escape-sequences="true" display-tooltip-when-elided="true" />
