--- a/Assets/Main/Layouts/ApplyDeleteLayerScreen.uxml
+++ b/Assets/Main/Layouts/ApplyDeleteLayerScreen.uxml
@@ -1,9 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement style="flex-grow: 0; align-items: center; justify-content: center; align-self: center; margin-top: auto; margin-right: auto; margin-bottom: auto; margin-left: auto; background-color: rgb(195, 195, 195); padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px;">
-        <ui:Label tabindex="-1" text="Do apply changes?" parse-escape-sequences="true" display-tooltip-when-elided="true" style="align-items: center;" />
+        <ui:Label tabindex="-1" text="Do apply deleting layer?" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TitleLabel" style="align-items: center;" />
         <ui:VisualElement style="flex-grow: 0; flex-direction: row; align-items: center; align-self: center; justify-content: flex-start;">
             <ui:Button text="Apply" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ApplyBtn" />
-            <ui:Button text="Discard" parse-escape-sequences="true" display-tooltip-when-elided="true" name="DiscardBtn" />
             <ui:Button text="Cancel" parse-escape-sequences="true" display-tooltip-when-elided="true" name="CancelBtn" />
         </ui:VisualElement>
     </ui:VisualElement>
