--- a/Assets/Main/Layouts/EditorSreen.uxml
+++ b/Assets/Main/Layouts/EditorSreen.uxml
@@ -2,7 +2,8 @@
     <ui:VisualElement style="align-items: center; align-self: center; margin-top: auto; margin-right: auto; margin-bottom: auto; margin-left: auto; background-color: rgb(219, 219, 219); padding-top: 16px; padding-right: 16px; padding-bottom: 16px; padding-left: 16px;">
         <ui:VisualElement name="TabsLayout" style="flex-grow: 0; flex-direction: row; align-items: center; align-self: flex-start;">
             <ui:Button text="Import From Texture" name="ImportBtn" />
-            <ui:Button text="Export Mesh" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportBtn" />
+            <ui:Button text="Export Single Mesh" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportSingleBtn" />
+            <ui:Button text="Export All Meshes" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportAllBtn" />
         </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
             <ui:Button text="Load Vox" parse-escape-sequences="true" display-tooltip-when-elided="true" name="LoadVoxBtn" />
