--- a/Assets/Main/Layouts/EditorSreen.uxml
+++ b/Assets/Main/Layouts/EditorSreen.uxml
@@ -1,14 +1,15 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement style="align-items: center; align-self: center; margin-top: auto; margin-right: auto; margin-bottom: auto; margin-left: auto; background-color: rgb(219, 219, 219); padding-top: 16px; padding-right: 16px; padding-bottom: 16px; padding-left: 16px;">
-        <ui:VisualElement name="TabsLayout" style="flex-grow: 0; flex-direction: row; align-items: center; align-self: flex-start;">
-            <ui:Button text="Import From Texture" name="ImportBtn" />
-            <ui:Button text="Export Single Mesh" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportSingleBtn" />
-            <ui:Button text="Export All Meshes" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportAllBtn" />
-        </ui:VisualElement>
         <ui:VisualElement style="flex-grow: 1; flex-direction: row; align-self: flex-start;">
+            <ui:Button text="Import From Texture" name="ImportBtn" />
             <ui:Button text="Load Vox" parse-escape-sequences="true" display-tooltip-when-elided="true" name="LoadVoxBtn" />
             <ui:Button text="Load Texture" parse-escape-sequences="true" display-tooltip-when-elided="true" name="LoadTextureBtn" />
             <ui:Button text="Save Vox" parse-escape-sequences="true" display-tooltip-when-elided="true" name="SaveVoxBtn" />
+        </ui:VisualElement>
+        <ui:VisualElement style="flex-grow: 1; align-self: flex-start; flex-direction: row;">
+            <ui:Toggle label="Voxel mesh" name="ExportAsVoxelToggle" style="align-self: center;" />
+            <ui:Button text="Export Single Mesh" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportSingleBtn" />
+            <ui:Button text="Export All Meshes" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ExportAllBtn" />
         </ui:VisualElement>
         <ui:VisualElement name="LoadedStateLayout" style="flex-grow: 0; align-self: flex-start;">
             <ui:VisualElement style="flex-grow: 1; flex-direction: row;">
